--- a/css/style.css
+++ b/css/style.css
@@ -22,7 +22,7 @@ input[type="text"],input[type="password"]{
     margin: auto;
     margin-bottom: 20px;
     background-color: #fff;
-    padding-left: 30px;
+    text-align: center;
 }
 .btn-login{
     padding: 15px 25px;
