--- a/css/header.css
+++ b/css/header.css
@@ -4,32 +4,32 @@ body{
 }
 .header{
     width: 100%;
-    height: 90px;
+    height: 130px;
     background-color: gainsboro;
-    padding: 20px;
+    padding-bottom: 20px;
     margin-right: 20px;
 }
-.header .img{
-
-    width: 50px;
-    height: 100px;
+img{
+    width: 195px;
+    height: 150px;
 }
 .login{
     padding: 15px 25px;
     color: #fff;
     border: none;
-    background-color: #2ECC71;
-    border-bottom: 4px solid #27AE60;
+    background-color: #8EB529;
+    border-bottom: 4px solid #779E29;
     position: absolute;
     right: 160px;
-    top: 36px;
+    top: 50px;
 }
 .login2{
     padding: 15px 25px;
     color: #fff;
     border: none;
-    background-color: #2ECC71;
-    border-bottom: 4px solid #27AE60;
+    background-color: #8EB529;
+    border-bottom: 4px solid #779E29;
     position: absolute;
     right: 20px;
+    top: 50px;
 }
