--- a/css/style.css
+++ b/css/style.css
@@ -2,13 +2,42 @@ body{
     /*margin: 0;*/
     /*padding: 0;*/
 }
+.button{
+    display: inline-block;
+    padding: 15px 25px;
+    color: #fff;
+    border: none;
+    background-color: #8EB529;
+    border-bottom: 4px solid #779E29;
+    position: absolute;
+    top: 175px;
+    right: 20px;
+}
+.monday{
+    display:inline-block;
+    margin: auto;
+}
+.table{
+    font-family: arial, sans-serif;
+    border-collapse: collapse;
+    width: 100%;
+}
+td, th {
+    border: 1px solid #dddddd;
+    text-align: left;
+    padding: 8px;
+}
+tr:nth-child(even) {
+    background-color: #dddddd;
+}
 .weekdays{
     display:inline-block;
-    margin-left: 13px;
+    margin:0 auto;
     border: 1px solid black;
     padding-left: 36px;
     padding-right: 36px;
     border-radius: 40px;
+    position: relative;
 }
 .heading{
     width: 100%;
@@ -42,3 +71,67 @@ input[type="text"],input[type="password"]{
 p{
     color: #000000;
 }
+.modal {
+    display: none; /* Hidden by default */
+    position: fixed; /* Stay in place */
+    z-index: 1; /* Sit on top */
+    padding-top: 100px; /* Location of the box */
+    left: 0;
+    top: 0;
+    width: 100%; /* Full width */
+    height: 100%; /* Full height */
+    overflow: auto; /* Enable scroll if needed */
+    background-color: rgb(0,0,0); /* Fallback color */
+    background-color: rgba(0,0,0,0.4); /* Black w/ opacity */
+}
+
+/* Modal Content */
+.modal-content {
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 50%;
+    height:50%;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
+
+/* Add Animation */
+@-webkit-keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+@keyframes animatetop {
+    from {top:-300px; opacity:0}
+    to {top:0; opacity:1}
+}
+
+/* The Close Button */
+.close {
+    color: white;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.modal-header {
+    padding: 2px 16px;
+    background-color: #8EB529;
+    color: white;
+    text-align: center;
+}
+
+.modal-body {padding: 2px 16px;}
