--- a/css/style.css
+++ b/css/style.css
@@ -1,7 +1,3 @@
-body{
-    /*margin: 0;*/
-    /*padding: 0;*/
-}
 .button{
     display: inline-block;
     padding: 15px 25px;
@@ -14,31 +10,38 @@ body{
     right: 20px;
     cursor: pointer;
 }
-.monday{
+.monday, .tuesday, .wednesday, .thursday, .friday, .saturday, .sunday{
     display:inline-block;
     margin: auto;
 }
 .table{
     font-family: arial, sans-serif;
     border-collapse: collapse;
-    width: 100%;
+    width: 160px;
+    border: ridge;
+    margin-top: 10px;
+    margin-left: 15px;
 }
-td, th {
+.rows {
     border: 1px solid #dddddd;
-    text-align: left;
+    text-align: center;
     padding: 8px;
 }
-tr:nth-child(even) {
-    background-color: #dddddd;
+.heading{
+    font-weight: bold;
+    border: 1px solid #dddddd;
+    text-align: center;
+    padding: 8px;
 }
 .weekdays{
     display:inline-block;
-    margin:0 auto;
     border: 1px solid black;
-    padding-left: 36px;
-    padding-right: 36px;
     border-radius: 40px;
-    position: relative;
+    width: 160px;
+    margin-left: 15px;
+}
+h2{
+    text-align: center;
 }
 .heading{
     width: 100%;
