route modal update

--- a/css/style.css
+++ b/css/style.css
@@ -45,6 +45,7 @@
     border: 1px solid #dddddd;
     text-align: center;
     padding: 8px;
+    cursor: pointer;
 }
 .heading{
     font-weight: bold;
@@ -127,7 +128,7 @@ p{
     padding: 0;
     border: 1px solid #888;
     width: 50%;
-    height: 235px;
+    height: 225px;
     box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
     -webkit-animation-name: animatetop;
     -webkit-animation-duration: 0.4s;
@@ -191,4 +192,11 @@ p{
     font-size: inherit;
     border: none;
     cursor: pointer;
+}
+.routeDetails{
+    margin: 0px;
+}
+
+.routeInput{
+    margin:0;
 }
