update route modal for all calendars

--- a/css/style.css
+++ b/css/style.css
@@ -135,6 +135,20 @@ p{
     animation-name: animatetop;
     animation-duration: 0.4s
 }
+.route-modal-content{
+    position: relative;
+    background-color: #fefefe;
+    margin: auto;
+    padding: 0;
+    border: 1px solid #888;
+    width: 50%;
+    height: 607px;
+    box-shadow: 0 4px 8px 0 rgba(0,0,0,0.2),0 6px 20px 0 rgba(0,0,0,0.19);
+    -webkit-animation-name: animatetop;
+    -webkit-animation-duration: 0.4s;
+    animation-name: animatetop;
+    animation-duration: 0.4s
+}
 .password-modal-content {
     position: relative;
     background-color: #fefefe;
@@ -194,9 +208,6 @@ p{
     cursor: pointer;
 }
 .routeDetails{
-    margin: 0px;
+    text-align: left;
 }
 
-.routeInput{
-    margin:0;
-}
