--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ p{
 }
 .password-Modal {
     display: none; /* Hidden by default */
-    position: fixed; /* Stay in place */
+    position: absolute; /* Stay in place */
     z-index: 1; /* Sit on top */
     padding-top: 100px; /* Location of the box */
     left: 0;
