--- a/css/header.css
+++ b/css/header.css
@@ -5,7 +5,7 @@ body{
 .header{
     width: 100%;
     height: 130px;
-    background-color: gainsboro;
+    background-color: antiquewhite;
     padding-bottom: 20px;
     margin-right: 20px;
 }
