modals updated. css changes

--- a/css/style.css
+++ b/css/style.css
@@ -211,3 +211,27 @@ p{
     text-align: left;
 }
 
+.addRoute{
+    width: 100%;
+    height: 30px;
+    background-color: #8EB529;
+    border-bottom: 4px solid #779E29;
+}
+
+.addBus{
+    width: 100%;
+    height: 30px;
+    margin-top: 10px;
+    background-color: #8EB529;
+    border-bottom: 4px solid #779E29;
+}
+.edit{
+    width: 60px;
+    height: 50px;
+}
+
+.delete{
+    width: 60px;
+    height: 50px;
+}
+
